@@ -56,7 +56,7 @@ $cs_lang['emailregister'] = 'Email at Registration';
 $cs_lang['icq'] = 'ICQ';
 $cs_lang['mobile'] = 'Cell Phone';
 $cs_lang['jabber'] = 'Jabber';
-$cs_lang['jabber_info'] = 'Includes XMPP, Google Talk/Chat and other services';
+$cs_lang['jabber_info'] = 'Includes XMPP, Google Talk and other services';
 $cs_lang['skype'] = 'Skype';
 $cs_lang['info'] = 'Information';
 $cs_lang['message_send'] = 'Send Message';
