@@ -56,7 +56,7 @@ $cs_lang['emailregister'] = 'E-Mail bei Registrierung';
 $cs_lang['icq'] = 'ICQ';
 $cs_lang['mobile'] = 'Handy';
 $cs_lang['jabber'] = 'Jabber';
-$cs_lang['jabber_info'] = 'Beinhaltet XMPP, Google Talk/Chat und weitere Dienste';
+$cs_lang['jabber_info'] = 'Beinhaltet XMPP, Google Talk und weitere Dienste';
 $cs_lang['skype'] = 'Skype';
 $cs_lang['info'] = 'Info';
 $cs_lang['message_send'] = 'Nachricht schicken';
