@@ -1,14 +1,16 @@
 CHANGELOG
 --------------------------
 
-ClanSphere 2011.4 R3 >> 2013-05-09
+ClanSphere 2011.4.1 >> 2013-XX-XX
 ___________________________________________________________
+
+-- Recommended PHP version changed to 5.4.15
 
 -> Downgraded jQuery to 1.8.3 [R1]
    Replace mods/jquery/jquery.js to apply it
 -> Fixed users manage page turns not working in some cases [R2]
    Replace mods/users/manage.php to apply it
--> Fixed board threads marked as unread for no reason due to deleted comments [R3]
+-> Fixed board threads marked as unread for no reason due to deleted comments
    Replace mods/comments/remove.php to apply it
 
 
